corrected the background clipping issue

--- a/app/links/page.module.scss
+++ b/app/links/page.module.scss
@@ -2,7 +2,6 @@
   background: linear-gradient(155.85deg, #f7cade 11.48%, #cde7ff 67.04%);
   text-align:center;
   width: 100vw;
-  height:100vh;
   margin: 0;
 }
 .h1{
